<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ডেঙ্গু  এসটিপি</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">ল্যাব টেস্ট</string>
    <string name="banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="menu_home">হোম </string>
    <string name="menu_about">আমাদের সম্পর্কে </string>
    <string name="menu_qa">প্রশ্ন উত্তর</string>
    <string name="menu_privacy">প্রাইভেসি</string>
    <string name="menu_terms">টার্মস এন্ড কন্ডিশন </string>
    <string name="menu_rating">রেটিং </string>
    <string name="menu_share">শেয়ার</string>
    <string name="title">শিশুদের ডেঙ্গু: কিভাবে বুঝবেন, বাবা-মায়ের করণীয় কী, চিকিৎসকরা কী করবেন?</string>
    <string name="title1">শিশুদের ডেঙ্গু রোগ প্রতিরোধে করণীয় কী?</string>
    <string name="title2">শিশুর ডেঙ্গু রোগের লক্ষণ কী কী?</string>
    <string name="title3">শিশুদের ডেঙ্গু রোগের চিকিৎসা কেমন হয়ে থাকে?</string>
    <string name="title4">কবে প্রথম ডেঙ্গু জ্বর রোগটি শনাক্ত হয়?</string>
    <string name="title5">ডেঙ্গু জ্বর: হৃদরোগী কেউ ডেঙ্গুতে আক্রান্ত হলে কী করবেন?</string>
    <string name="title6">হৃদরোগ ও ডেঙ্গু: কোনটির চিকিৎসা আগে?</string>
    <string name="title7">ডেঙ্গু জ্বর: এডিস মশা সম্পর্কে যেসব তথ্য জেনে রাখা ভাল।</string>
    <string name="title8">ডেঙ্গু জ্বর: বেসিনে হারপিক, ব্লিচিং পাউডার ঢাললে মশা নয়, ভুগবে মানুষ - বলছেন বিশেষজ্ঞরা</string>
    <string name="title9">ডেঙ্গু জ্বর: পেঁপে পাতার রস বা নারিকেল তেল কি আসলেই ডেঙ্গুর বিরুদ্ধে কার্যকর?</string>
    <string name="short_title">ডেঙ্গু একটি প্রাচীন রোগ। এই রোগের প্রথম উল্লেখ পাওয়া গেছে চীনের চিকিৎসা সংক্রান্ত নথিপত্রে। সেখান থেকে জানা.....</string>
    <string name="short_title1">বিশ্ব স্বাস্থ্য সংস্থার হিসেবে বাংলাদেশে ৫৩ ভাগ মৃত্যুর কারণ অসংক্রামক রোগ ও এর মধ্যে.....</string>
    <string name="short_title2">প্রথমে জ্বর নিয়ন্ত্রণে এনে শরীরের ফ্লুয়িড ম্যানেজমেন্ট ঠিক রাখতে হবে। প্রেশার ঠিক করতে হবে। জ্বর কমে গেলে.....</string>
    <string name="short_title3">এই জাতীয় মশার দেহে সাদা কালো ডোরাকাটা দাগ থাকে, যে কারণে এটিকে টাইগার মশা বলা হয়। এই জাতীয় মশা মাঝারি.....</string>
    <string name="short_title4">বেসিনে হারপিক বা ব্লিচিং পাউডারে ডেঙ্গু মশা নিমূর্ল হবে?......</string>
    <string name="short_title5">ঢাকা মেডিকেল কলেজের মেডিসিন বিভাগের শিক্ষক মোহাম্মদ মুজিবুর রহমান বলেন, পেঁপে পাতার.....</string>
    <string name="hotline_gov">Ahsania Mission Cancer &amp; General Hospital - +880-2-8051618, Al- Helal Speacialist Hospital - +880-2-9008181, Apollo Hospital ( Bangladesh ) - +880-1729276556, Bangabondhu Sheikh Mujib Medical University (BSMMU) (PG Hospital) - +880-2-8618653
</string>
    <string name="em_details">ডেঙ্গু জ্বরের যে পরীক্ষাগুলো এসছে, এক থেকে দুই দিনের মধ্যে এটি নির্ণয় করা যায়। যদি বেশি মাত্রায় জ্বর, সঙ্গে খুব বেশি মাথাব্যথা, বমি হয়, তাহলে যত দ্রুত সম্ভব চিকিৎসকের কাছে যাওয়া উচিত। \n
ডেঙ্গু জ্বরে প্রথম এক থেকে দুই দিনের মধ্যে আমরা যে এন এসওয়ান অ্যান্টিজেন পরীক্ষা করি,তাহলে জ্বরটা মোটামুটিভাবে ধরা পড়ে যায়। \n\n এই জ্বরে প্রচুর পানি বের হয়ে যায়। তাই বাচ্চাকে মা-বাবার প্রচুর পরিমাণ তরল খাবারটা দিতে হবে। এটা হতে পারে বাসায় তৈরি সতেজ জুস অথবা ডাবের পানি অথবা ওরস্যালাইন। সাধারণত দুই থেকে তিন দিন পরে ডেঙ্গু জ্বরে জ্বরটা কমে আসে। তখন দেখা যায় শরীরে র‍্যাশ আসে। \n\n এই র‍্যাশ যে সময় আসে, তখন এই সময়টায় জ্বর থাকবে না। কিন্তু এই তিন দিন পর থেকে এই সময়টা হচ্ছে মারাত্মক ঝুঁকিপূর্ণ। সাত থেকে আট দিন এই সময়টা হলো জটিল অবস্থা। এই সময় দেখা যায় যে পানি বের হয়ে আসছে। সঙ্গে সঙ্গে রক্তের প্লেটিলেট এর একটি পরীক্ষা করা। প্লেটিলেট কাউন্ট কমে গেলে উদ্বেগের কিছু নেই। যদি বাচ্চাটা পর্যাপ্ত বিশ্রাম নিতে পারে, বাচ্চা পর্যাপ্ত খাওয়া-দাওয়া করতে পারে, তরল খাবার খেতে পারে, বাসায় বাচ্চার চিকিৎসা সম্ভব।
</string>
    <string name="em_details1"> শিশুদের ডেঙ্গু রোগ হওয়া থেকে বাঁচাতে শুরুতেই এমন পরিবেশ নিশ্চিত করতে হবে যেন তাদের মশা না কামড়ায়।\n\n
১. এডিস মশা সাধারণত গৃহস্থালির পরিষ্কার স্থির পানিতে জন্মে থাকে - যেমন ফুলের টব, গাড়ির টায়ার বা ডাবের খোলে বৃষ্টির জমা পানি ইত্যাদি। তাই এডিস মশার লার্ভা জন্ম নিতে পারে এমন স্থানগুলো চিহ্নিত করে সেগুলো নষ্ট করে ফেলতে হবে। বাড়ির আঙ্গিনা পরিষ্কার-পরিচ্ছন্ন রাখতে হবে।\n\n
২. শিশুদের দিনে ও রাতে মশারির ভেতরে রাখতে হবে। বিশেষ করে নবজাতক শিশুকে সার্বক্ষণিক মশারির ভেতরে রাখা জরুরি। এছাড়া হাসপাতালে কোন শিশু যদি অন্য রোগের চিকিৎসাও নিতে আসে, তাহলে তাকেও মশারির ভেতরে রাখতে হবে। কেননা ডেঙ্গু আক্রান্ত কাউকে এডিস মশা কামড়ে পরে কোন শিশুকে কামড়ালে তার শরীরেও ডেঙ্গুর ভাইরাস ছড়িয়ে পড়তে পারে।\n\n
৩. শিশুরা যে সময়টায় বাইরে ছুটোছুটি বা খেলাধুলা করে, সে সময়টায় তাদের শরীরে মসকুইটো রেপেলেন্ট অর্থাৎ মশা নিরোধীকরণ স্প্রে, ক্রিম বা জেল ব্যবহার করা যেতে পারে। এবং কয়েক ঘণ্টা অন্তর পুনরায় এই রেপেলেন্ট প্রয়োগ করতে হবে।\n\n
৪. শিশু যদি অনেক ছোট হয় বা তাদের শরীরে ক্রিম বা স্প্রে ব্যবহার করা না যায়, তাহলে তাদের হাতে মসকুইটো রেপেলেন্ট বেল্ট বা পোশাকে প্যাচ ব্যবহার করা যেতে পারে।\n\n
৫. মশার কামড় প্রতিরোধে আরেকটি সতর্কতামূলক ব্যবস্থা হতে পারে শিশুদের ফুল হাতা ও ফুল প্যান্ট পরিয়ে রাখা।\n\n
৬. তবে মশা প্রতিরোধ অ্যারোসল, মশার কয়েল বা ফাস্ট কার্ড শিশু থেকে শুরু করে সবার জন্যই ক্ষতিকর হতে পারে। এর পরিবর্তে মসকুইটো কিলার বাল্ব, ইলেকট্রিক কিলার ল্যাম্প, ইলেকট্রিক কয়েল, মসকুইটো কিলার ব্যাট, মসকুইটো রেপেলার মেশিন, মসকুইটো কিলার ট্র্যাপ ইত্যাদির সাহায্যে নিরাপদে মশা ঠেকানো যেতে পারে। তবে এক্ষেত্রে এই সরঞ্জামগুলো যেন শিশুর নাগালের বাইরে থাকে হবে। \n\n
৭. যদি শিশুর মা ডেঙ্গু রোগে আক্রান্ত হন, তাহলে সেই ভাইরাসের কোন প্রভাব মায়ের বুকের দুধে পড়ে না। কাজেই আক্রান্ত অবস্থায় মা তার বাচ্চাকে বুকের দুধ খাওয়াতে পারবেন।
 </string>
    <string name="em_details2"> সাধারণত ডেঙ্গুবাহী এডিস মশা কামড় দেয়ার পর সুস্থ ব্যক্তির শরীরে ডেঙ্গুর ভাইরাস ছড়িয়ে পড়ে। এবং এই ভাইরাস শরীরে প্রবেশের চার থেকে ১০ দিনের মধ্যে নানা ধরণের উপসর্গ দেখা দেয়।তাই এই সময়ে শিশুর জ্বর এলে চিকিৎসকের শরণাপন্ন হওয়া প্রয়োজন।
 ডেঙ্গু রোগের লক্ষণ আগের চাইতে এখন অনেকটাই বদলে গেছে।\n\n ডেঙ্গু যেহেতু ভাইরাসজনিত রোগ, তাই এই রোগে জ্বরের তাপমাত্রা সাধারণত ১০১, ১০২ ও ১০৩ ডিগ্রী ফারেনহাইট হতে পারে। তবে ডেঙ্গু হলেই যে তীব্র জ্বর থাকবে, এমনটা নয়। জ্বর ১০০ এর নীচে থাকা অবস্থাতেও অনেক শিশুর ডেঙ্গু শনাক্ত হয়েছে।\n\n
মূলত ডেঙ্গুর এই জ্বরকে তিনটি ভাগে ভাগ করা হয়।\n\n
	প্রথমত ফেব্রাইল ফেজ - শিশুর ডেঙ্গু জ্বর ২ থেকে ৩ দিন বা তার চাইতে বেশি স্থায়ী হলে।\n\n
	দ্বিতীয়ত অ্যাফেব্রাইল ফেজ - এসময় বাচ্চার আর জ্বর থাকে না। সাধারণত এর সময়কাল থাকে ২-৩ দিন।\n\n
	তৃতীয়ত কনভালিসেন্ট ফেজ - যখন শিশুর শরীরে র‍্যাশ দেখা যায়। এর সময়কাল থাকে ৪-৫ দিন।\n\n
২. শিশুর মধ্যে স্বাভাবিক চঞ্চলতা থাকে না - শিশু নিস্তেজ হয়ে পড়ে এবং ঝিমাতে থাকে। অযথা কান্নাকাটি করে।\n\n
৩. শিশুর মধ্যে প্রচণ্ড ক্ষুধামন্দা দেখা দেয়, কিছুই খেতে চায় না। বমি বমি ভাব হয় বা কিছু খেলেই বমি করে দেয়।\n\n
৪. ৬-৮ ঘণ্টার মধ্যে শিশুর প্রস্রাব না হওয়া ডেঙ্গুর মারাত্মক লক্ষণগুলোর মধ্যে একটি।\n\n
৫. শরীরে লালচে র‍্যাশ দেখা দিতে পারে।\n\n
৬. মাথাব্যথা, শরীর ব্যথা, পেটে ব্যথা হতে পারে।\n\n
৭. হতে পারে পানি শূন্যতা এবং পাতলা পায়খানাও।\n\n
৮. চোখ লাল হয়ে যাওয়া, কাশি বা শ্বাসকষ্ট হওয়া। এটা মূলত অ্যাফেব্রাইল স্তরে বেশি হয়ে থাকে।\n\n
৯. পরিস্থিতি গুরুতর হলে অর্থাৎ ডেঙ্গুর কারণে শিশুর শকে যাওয়ার অবস্থা হলে তার পেট ফুলে যেতে পারে বা শরীরের বিভিন্ন স্থান থেকে রক্তক্ষরণ হতে পারে। যেমন রক্তবমি, পায়খানার সাথে রক্ত যাওয়া ইত্যাদি।\n\n
 </string>
    <string name="em_details3">মেডিকেল পরীক্ষায় যদি শিশুর ডেঙ্গু ধরা পড়ে, তাহলে চিকিৎসকের পরামর্শ অনুযায়ী প্রয়োজনীয় ব্যবস্থা নিতে হবে।
শিশুর মধ্যে যদি বিপদ চিহ্ন দেখা দেয়, তাহলে চিকিৎসকরাই তাকে হাসপাতালে ভর্তির পরামর্শ দেবেন।
শিশুর মধ্যে ডেঙ্গুর প্রাথমিক লক্ষণগুলো দেখা দিলে চিকিৎসকরা সাধারণত কয়েক ধরণের রক্তের পরীক্ষা দিয়ে থাকেন - এগুলো হল কমপ্লিট ব্লাড কাউন্ট (সিবিসি), এনএস ওয়ান অ্যান্টিজেন, এফজিপিটি এবং এফজিওটি।
এসব পরীক্ষায় ডেঙ্গু শনাক্ত হলে প্রতিদিন একবার সিবিসি পরীক্ষার মাধ্যমে পরিস্থিতি উন্নতি নাকি অবনতি হচ্ছে, তা পর্যবেক্ষণ করা হবে।
শিশুর শারীরিক অবস্থা বিবেচনায় নিচের কয়েকটি উপায়ে চিকিৎসা দেয়া হয়ে থাকে ।\n\n
১. শিশুর শরীরে যদি জ্বর থাকে, তাহলে পানি দিয়ে শরীর বার বার স্পঞ্জ করে তাপমাত্রা নিয়ন্ত্রণে রাখতে হবে।\n\n
২. শিশুকে পানি ও মায়ের বুকের দুধের পাশাপাশি বেশি পরিমাণে তরল খাবার, বিশেষ করে খাওয়ার স্যালাইন, ডাবের পানি, ফলের শরবত, স্যুপ ইত্যাদি খাওয়ার পরামর্শ দেন চিকিৎসকরা।\n\n
৩. ডেঙ্গুর ধরণ বুঝে চিকিৎসকরা শিশুদের প্যারাসিটামল অথবা অ্যান্টিবায়োটিক ওষুধ দিয়ে থাকেন।\n\n
৪. রক্তচাপ অস্বাভাবিক থাকলে স্যালাইন দিয়ে তা নিয়ন্ত্রণে রাখা হয়।\n\n
৫. যদি শরীরে প্লাজমা লিকেজের কারণে ফ্লুয়িড জমতে থাকে, তাহলে স্যালাইনের মাধ্যমে শরীরে অ্যালবোমিন প্রয়োগ করা হয়। রোগী শক সিনড্রোমে চলে গেলে এই চিকিৎসা দেয়া হয়ে থাকে।\n\n
৬. এছাড়া শিশুর শরীরে রক্তক্ষরণ শুরু হলে রক্ত দেয়ারও প্রয়োজন হতে পারে।\n\n
৭. শিশুর রক্তে প্লেটলেট যদি ৫,০০০ থেকে ১০,০০০ এর নীচে চলে আসে বা রক্তরক্ষণ হয়, তাহলে শিশুকে আইসিইউ-তে রেখে প্লেটলেট দেয়ার প্রয়োজন হয়।\n\n
৮. রোগীর পরিস্থিতি গুরুতর হলে রক্ত পরীক্ষার পাশাপাশি বুকের এক্স রে, পেটের আলট্রাসনোগ্রাফি, ইলেক্ট্রোলাইটের মাত্রা পরিমাপ করা হয়। এছাড়া প্রস্রাব না হলে ক্রিয়াটিনিনের মাত্রা পরিমাপ করা হয়।
রোগীর লক্ষণের ওপর এই পরীক্ষাগুলো নির্ভর করে।
 </string>
    <string name="ge_details3"> এডিস মশা দেখতে কেমন হয়?
এই জাতীয় মশার দেহে সাদা কালো ডোরাকাটা দাগ থাকে, যে কারণে এটিকে টাইগার মশা বলা হয়।
এই জাতীয় মশা মাঝারি আকারের হয়ে থাকে এবং এর অ্যান্টেনা বা শুঙ্গটি কিছুটা লোমশ দেখতে হয়।
এডিস মশার অ্যান্টেনায় অনেকটা দাড়ির মত থাকে। পুরুষ মশার অ্যান্টেনা স্ত্রী মশার চেয়ে অপেক্ষাকৃত বেশি লোমশ দেখতে হয়।
দেহের ডোরাকাটা দাগ এবং অ্যান্টেনা দেখে এডিস মশা চেনা সম্ভব।\n\n
এডিস মশা কি শুধু সকালে কামড়ায়?
শুধুমাত্র দিনের আলো থাকাকালীন সময়েই এডিস মশা কামড়ায়। সূর্যোদয় থেকে সূর্যাস্ত পর্যন্ত এডিস মশা কামড়ায়। তবে কামড়ানোর হার সবচেয়ে বেশি থাকে সূর্যোদয়ের পর দুই-তিন ঘন্টা এবং সূর্যাস্তের আগের কয়েক ঘন্টা। রাতে এডিস মশা কামড়ায় না।\n\n
শুধু কি পায়েই কামড়ায় এডিস মশা?
"মশা সাধারণত মানুষের পায়েই কামড়ায়, কারণ সাধারণত শরীরে পা'ই অনাবৃত থাকে। তবে শুধু যে পায়েই মশা কামড়ায়, বিষয়টি এরকম নয়।\n\n
এডিস মশা একবার কামড়ালেই কী ডেঙ্গু হয়?
এডিস মশা ভাইরাস সংক্রমিত থাকা অবস্থায় মানুষকে কামড়ালে সুস্থ মানুষের ডেঙ্গু হতে পারে।
ভাইরাসের কারণে হওয়া জ্বরে আক্রান্ত থাকা ব্যক্তিকে এডিস মশা কামড়ালেও মশার মধ্যে ভাইরাস সংক্রমণ হওয়ার সুযোগ থাকে।
"এডিস মশার একটা বিষয় হলো, তারা সাধারণত একাধিক ব্যক্তিকে কামড়ায়। তাই ভাইরাস জ্বরে আক্রান্ত কোনো ব্যক্তির শরীর থেকে এডিস মশার মধ্যে ভাইরাস সংক্রমণ হওয়ার পর ঐ মশার কামড়ে ডেঙ্গু হয়।"
 </string>
</resources>