<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="#fff"
        tools:context=".GeneralActivity.GeInformationDetails3">


        <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gen_demo4">

                </ImageView>

                <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    ads:adSize="SMART_BANNER"
                    ads:adUnitId="@string/banner_id">
                </com.google.android.gms.ads.AdView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height=".5dp"
                    android:layout_marginTop="4dp"
                    android:background="#C7C7C7" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/title7"
                    android:textSize="18dp"
                    android:padding="12dp"
                    android:fontFamily="@font/hind_siliguri_bold"/>


                <View
                    android:layout_width="match_parent"
                    android:layout_height=".5dp"
                    android:layout_marginTop="4dp"
                    android:background="#C7C7C7" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:padding="12dp"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="10dp"
                    android:text="@string/ge_details3"
                    android:textSize="16dp"
                    android:fontFamily="@font/hind_siliguri_light_regular"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>